--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -201,6 +201,15 @@
     <ClCompile Include="BattleShipTC.cpp">
       <Filter>소스 파일\배틀쉽</Filter>
     </ClCompile>
+    <ClCompile Include="BinarySearchTree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="lesson0923.cpp">
+      <Filter>소스 파일\Week4</Filter>
+    </ClCompile>
+    <ClCompile Include="TemplateCalculator.cpp">
+      <Filter>소스 파일\Week4</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -358,6 +367,18 @@
     </ClInclude>
     <ClInclude Include="BattleShipTC.h">
       <Filter>소스 파일\배틀쉽</Filter>
+    </ClInclude>
+    <ClInclude Include="BinarySearchTree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lesson0923.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Coordinate.h">
+      <Filter>소스 파일\Week4</Filter>
+    </ClInclude>
+    <ClInclude Include="TemplateCalculator.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
