--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="lesson0919.cpp" />
     <ClCompile Include="lesson0922.cpp" />
     <ClCompile Include="lesson0923.cpp" />
+    <ClCompile Include="lesson0924.cpp" />
     <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="MazePlayer.cpp" />
     <ClCompile Include="Monster.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="lesson0919.h" />
     <ClInclude Include="lesson0922.h" />
     <ClInclude Include="lesson0923.h" />
+    <ClInclude Include="lesson0924.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MazePlayer.h" />
